--- a/web/index.css
+++ b/web/index.css
@@ -7,6 +7,11 @@ html, body, #vcenter1 {
 	height: 100%;
 }
 
+#nipple {
+	width: 100%;
+	height: 100%;
+}
+
 #vcenter1 {
 	display: table;
 	width: 100%;
